--- a/src/resource.rc
+++ b/src/resource.rc
@@ -58,7 +58,7 @@ BEGIN
 	PUSHBUTTON ">>",IDC_DLG_MORE, 200, 5, 23, 14, WS_TABSTOP
 	AUTOCHECKBOX "Without rowid", IDC_DLG_ISWITHOUT_ROWID, 290, 5, 100, 16, BS_NOTIFY | NOT WS_VISIBLE
 
-	LTEXT "Table columns", IDC_DLG_LABEL, 5, 25, 100, 14, SS_LEFT
+	LTEXT "Table columns", IDC_DLG_LABEL, 5, 25, 100, 10, SS_LEFT
 	CONTROL "", IDC_DLG_COLUMNS, WC_LISTVIEW, WS_TABSTOP | LVS_AUTOARRANGE | LVS_REPORT | LVS_NOSORTHEADER | LVS_SHOWSELALWAYS | LVS_SINGLESEL, 5, 35, 220, 110, WS_EX_STATICEDGE
 
 	PUSHBUTTON "Add", IDC_DLG_ROW_ADD, 5, 150, 30, 14, WS_TABSTOP
@@ -96,6 +96,31 @@ BEGIN
 
 	PUSHBUTTON "OK", IDC_DLG_OK, 5, 130, 60, 14, WS_TABSTOP
 	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 70, 130, 60, 14, WS_TABSTOP
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_ADD_INDEX DIALOGEX 50, 50, 200, 200
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
+	CAPTION "Add index"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	LTEXT "Name", IDC_DLG_LABEL, 5, 7, 25, 14, SS_LEFT
+	EDITTEXT IDC_DLG_IDXNAME, 30, 5, 110, 12, WS_BORDER | WS_TABSTOP
+	AUTOCHECKBOX "Unique", IDC_DLG_ISUNIQUE, 155, 4, 40, 16, BS_NOTIFY | WS_TABSTOP
+
+	LTEXT "Available columns", IDC_DLG_LABEL, 5, 25, 100, 10, SS_LEFT
+	CONTROL "",IDC_DLG_COLUMNS, WC_LISTBOX, LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | LBS_NOTIFY, 5, 35, 90, 90, WS_EX_STATICEDGE
+
+	LTEXT "Indexed columns", IDC_DLG_LABEL, 104, 25, 100, 10, SS_LEFT
+	CONTROL "",IDC_DLG_INDEXED_COLUMNS, WC_LISTBOX, LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | LBS_NOTIFY, 104, 35, 90, 90, WS_EX_STATICEDGE
+	LTEXT "Double Click to move columns between lists\nCtrl + Click to change sorting order", IDC_DLG_LABEL, 5, 127, 190, 20, SS_CENTER
+
+	LTEXT "Where-clause for partial index", IDC_DLG_LABEL, 5, 150, 100, 14, SS_LEFT
+	EDITTEXT IDC_DLG_IDXWHERE, 5, 160, 190, 12, WS_BORDER | WS_TABSTOP
+
+
+	PUSHBUTTON "OK", IDC_DLG_OK, 70, 181, 60, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 135, 181, 60, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -344,23 +369,28 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_TOOL_IMPORT_CSV DIALOGEX 50, 50, 182, 160
+IDD_TOOL_IMPORT_CSV DIALOGEX 200, 50, 182, 200
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_MODALFRAME
-	CAPTION "Import data from CSV file"
+	CAPTION "Import CSV data"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	LTEXT "Table name", IDC_DLG_LABEL, 5, 7, 40, 14, SS_LEFT
-	EDITTEXT IDC_DLG_TABLENAME, 45, 5, 130, 12, WS_BORDER | WS_TABSTOP
+	AUTORADIOBUTTON "Into a new table", IDC_DLG_IMPORT_ACTION, 3, 2, 80, 14
+	AUTORADIOBUTTON "Into an existing table", IDC_DLG_IMPORT_ACTION2, 90, 2, 100, 14
+	LTEXT "Table name", IDC_DLG_LABEL, 5, 22, 45, 14, SS_LEFT
+	EDITTEXT IDC_DLG_TABLENAME, 50, 20, 125, 12, WS_BORDER
+	COMBOBOX IDC_DLG_TABLENAMES, 50, 20, 125, 200, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS | NOT WS_VISIBLE
+	AUTOCHECKBOX "Truncate data before import", IDC_DLG_ISTRUNCATE, 50, 15 + 18, 140, 12, BS_NOTIFY | NOT WS_VISIBLE
+	AUTOCHECKBOX "Use REPLACE instead of INSERT", IDC_DLG_ISREPLACE, 50, 15 + 30, 140, 12, BS_NOTIFY | NOT WS_VISIBLE
 
-	AUTOCHECKBOX "Column names in first line", IDC_DLG_ISCOLUMNS, 5, 19, 140, 16, BS_NOTIFY
-	LTEXT "Column delimiter", IDC_DLG_LABEL, 5, 37, 80, 14, SS_LEFT
-	COMBOBOX IDC_DLG_DELIMITER, 60, 36, 50, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
-	LTEXT "Encoding", IDC_DLG_LABEL, 5, 52, 80, 14, SS_LEFT
-	COMBOBOX IDC_DLG_ENCODING, 60, 49, 50, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
-	CONTROL "",	IDC_DLG_PREVIEW, WC_LISTVIEW, LVS_NOSCROLL | WS_TABSTOP | LVS_AUTOARRANGE | LVS_REPORT | LVS_SINGLESEL, 5, 70, 170, 60, WS_EX_STATICEDGE
+	AUTOCHECKBOX "Column names in first line", IDC_DLG_ISCOLUMNS, 5, 19 + 40, 140, 16, BS_NOTIFY
+	LTEXT "Column delimiter", IDC_DLG_LABEL, 5, 37 + 42, 80, 14, SS_LEFT
+	COMBOBOX IDC_DLG_DELIMITER, 65, 36 + 40, 50, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	LTEXT "Encoding", IDC_DLG_LABEL, 5, 52 + 40, 80, 14, SS_LEFT
+	COMBOBOX IDC_DLG_ENCODING, 65, 49 + 40, 50, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	CONTROL "",	IDC_DLG_PREVIEW, WC_LISTVIEW, LVS_NOSCROLL | WS_TABSTOP | LVS_AUTOARRANGE | LVS_REPORT | LVS_SINGLESEL, 5, 70 + 40, 170, 60, WS_EX_STATICEDGE
 
-	PUSHBUTTON "OK", IDC_DLG_OK,50, 141, 60, 14
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 115, 141, 60, 14
+	PUSHBUTTON "OK", IDC_DLG_OK,50, 141 + 40, 60, 14
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 115, 141 + 40, 60, 14
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -475,6 +505,15 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_TOOL_FOREIGN_KEY_CHECK DIALOGEX 50, 50, 250, 200
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
+	CAPTION "Foreign-key check"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	CONTROL "", IDC_DLG_FOREIGN_KEY_CHECK, WC_LISTVIEW, WS_TABSTOP | LVS_AUTOARRANGE | LVS_REPORT | LVS_SHOWSELALWAYS | LVS_SINGLESEL, 5, 5, 240, 190, WS_EX_STATICEDGE
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_DDL DIALOGEX 10, 10, 500, 400
 	STYLE WS_OVERLAPPEDWINDOW | WS_CAPTION | WS_SYSMENU
 	CAPTION "DDL"
@@ -569,6 +608,7 @@ BEGIN
 		END
 		MENUITEM "Generate data", IDM_GENERATE_DATA, GRAYED
 		MENUITEM SEPARATOR
+		MENUITEM "Foreign-key check", IDM_FOREIGN_KEY_CHECK, GRAYED
 		MENUITEM "Integrity check", IDM_CHECK_INTEGRITY, GRAYED
 		MENUITEM "Vacuum database", IDM_VACUUM, GRAYED
 		MENUITEM "Reindex database", IDM_REINDEX, GRAYED
@@ -635,6 +675,7 @@ BEGIN
 		MENUITEM "Clear", IDM_ERASE_DATA
 		MENUITEM SEPARATOR
 		MENUITEM "Add column", IDM_ADD_COLUMN
+		MENUITEM "Add index", IDM_ADD_INDEX
 	END
 END
 
@@ -733,8 +774,17 @@ BEGIN
 		MENUITEM SEPARATOR
 		POPUP "Compare with"
 		BEGIN
-			MENUITEM "To mark as submenu", IDM_RESULT_COMPARE
+			MENUITEM "Filler", IDM_RESULT_COMPARE
 		END
+	END
+END
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDC_MENU_TAB_RESULT MENU
+BEGIN
+	POPUP "Result"
+	BEGIN
+		MENUITEM "Copy query", IDM_TAB_RESULT_COPY_QUERY
 	END
 END
 
@@ -939,6 +989,7 @@ BEGIN
 		"* You can define your own types in the data generator by adding rows to \n   table ""generators"" in ""prefs.sqlite"". The type is defined by ""type"" column.\n\n" \
 		"* To edit a single table/view run: sqlite-gui <db path> <table name>\n\n" \
 		"* Copy and Export result rows operations use the same settings as Tools >\n   Export as CSV file. Settings are updated when you export any table.\n\n" \
+		"* To import Excel data, copy it to clipboard and paste to an editor\n\n" \
 		"* A beep when a database is opened indicates that REST API is available\n\n" \
 		"Cons\n" \
 		"* An empty string is set to NULL when data is edit\n" \
