--- a/src/resource.rc
+++ b/src/resource.rc
@@ -765,6 +765,7 @@ BEGIN
 	POPUP "Result"
 	BEGIN
 		MENUITEM "View as chart", IDM_RESULT_CHART
+		MENUITEM "Value preview", IDM_RESULT_PREVIEW
 		MENUITEM SEPARATOR
 		MENUITEM "Copy cell to clipboard", IDM_RESULT_COPY_CELL
 		MENUITEM "Copy row to clipboard", IDM_RESULT_COPY_ROW
@@ -871,6 +872,24 @@ BEGIN
 		MENUITEM "Cut", IDM_CLI_CUT
 		MENUITEM SEPARATOR
 		MENUITEM "Clear all", IDM_CLI_CLEAR_ALL
+	END
+END
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDC_MENU_PREVIEW_IMAGE MENU
+BEGIN
+	POPUP "Image Preview"
+	BEGIN
+		MENUITEM "Save to file", IDM_EXPORT_FILE
+	END
+END
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDC_MENU_PREVIEW_TEXT MENU
+BEGIN
+	POPUP "Text Preview"
+	BEGIN
+		MENUITEM "Copy", IDM_EDITOR_COPY
 	END
 END
 
