--- a/sqlite-gui.cbp
+++ b/sqlite-gui.cbp
@@ -56,6 +56,7 @@
 			<Add library="libwininet" />
 			<Add library="libws2_32" />
 			<Add library="libsqlite3" />
+			<Add library="ole32" />
 			<Add directory="lib" />
 		</Linker>
 		<Unit filename="ToDo.txt" />
