--- a/src/resource.rc
+++ b/src/resource.rc
@@ -28,7 +28,7 @@ IDD_ADDVIEWEDIT DIALOGEX 50, 50, 500, 300
 	CAPTION "Edit table/view; Add/edit index/trigger"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	CONTROL "",IDC_DLG_EDITOR, "RICHEDIT50W", ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL  | ES_NOHIDESEL, 1, 1, 498, 273, WS_EX_STATICEDGE
+	CONTROL "", IDC_DLG_EDITOR, "RICHEDIT50W", ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL | ES_NOHIDESEL, 1, 1, 498, 273, WS_EX_STATICEDGE
 	PUSHBUTTON "Example", IDC_DLG_EXAMPLE, 5, 282, 50, 14, WS_TABSTOP
 	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 445, 282, 50, 14, WS_TABSTOP
 	PUSHBUTTON "Execute", IDC_DLG_OK, 390, 282, 50, 14, WS_TABSTOP
@@ -273,13 +273,26 @@ IDD_FIND DIALOGEX 300, 100, 240, 55
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	LTEXT "Find", IDC_DLG_LABEL, 5, 7, 45, 14, SS_RIGHT
-	EDITTEXT IDC_DLG_FIND_STRING, 60, 5, 120, 12, ES_LEFT
+	COMBOBOX IDC_DLG_FIND_STRING, 60, 5, 120, 100, WS_VSCROLL | CBS_DROPDOWN | CBS_HASSTRINGS
 	LTEXT "Replace with", IDC_DLG_LABEL, 5, 22, 45, 14, SS_RIGHT
-	EDITTEXT IDC_DLG_REPLACE_STRING, 60, 20, 120, 12, ES_LEFT
+	COMBOBOX IDC_DLG_REPLACE_STRING, 60, 20, 120, 100, WS_VSCROLL | CBS_DROPDOWN | CBS_HASSTRINGS
 	AUTOCHECKBOX "Case sensitive", IDC_DLG_CASE_SENSITIVE, 60, 35, 100, 16, BS_NOTIFY
-	PUSHBUTTON "Find", IDC_DLG_FIND, 185, 5, 50, 14, WS_TABSTOP
-	PUSHBUTTON "Replace", IDC_DLG_REPLACE, 185, 21, 50, 14, WS_TABSTOP
-	PUSHBUTTON "Replace all", IDC_DLG_REPLACE_ALL, 185, 37, 50, 14, WS_TABSTOP
+	PUSHBUTTON "Find", IDC_DLG_FIND, 185, 4, 50, 14, WS_TABSTOP
+	PUSHBUTTON "Replace", IDC_DLG_REPLACE, 185, 20, 50, 14, WS_TABSTOP
+	PUSHBUTTON "Replace all", IDC_DLG_REPLACE_ALL, 185, 36, 50, 14, WS_TABSTOP
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_RESULT_FIND DIALOGEX 300, 100, 210, 38
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
+	CAPTION "Result search"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	LTEXT "Find", IDC_DLG_LABEL, 5, 7, 20, 14, SS_LEFT
+	COMBOBOX IDC_DLG_FIND_STRING, 30, 5, 120, 100, WS_VSCROLL | CBS_DROPDOWN | CBS_HASSTRINGS
+	AUTOCHECKBOX "Case sensitive", IDC_DLG_CASE_SENSITIVE, 30, 20, 60, 16, BS_NOTIFY
+
+	PUSHBUTTON "Find", IDC_DLG_FIND, 155, 4, 50, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -329,6 +342,21 @@ BEGIN
 	EDITTEXT IDC_DLG_NAME, 0, 0, 0, 0, WS_BORDER | WS_TABSTOP
 	LTEXT "SQL implementation code", IDC_DLG_CODE_LABEL, 0, 0, 0, 0, SS_LEFT
 	CONTROL "", IDC_DLG_EDITOR, "RICHEDIT50W", ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL  | ES_NOHIDESEL, 0, 0, 0, 0, WS_EX_STATICEDGE
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_TEXT_COMPARISON DIALOGEX 100, 50, 400, 300
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_SIZEBOX | DS_MODALFRAME
+	CAPTION "Text comparison"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	LTEXT "Text #1", IDC_DLG_ORIGINAL_LABEL, 0, 0, 0, 0, SS_LEFT
+	LTEXT "Text #2", IDC_DLG_COMPARED_LABEL, 0, 0, 0, 0, SS_RIGHT
+	LTEXT "0", IDC_DLG_ORIGINAL_COUNT, 0, 0, 0, 0, SS_CENTER | WS_BORDER | SS_CENTERIMAGE
+	LTEXT "0", IDC_DLG_COMPARED_COUNT, 0, 0, 0, 0, SS_CENTER | WS_BORDER | SS_CENTERIMAGE
+	PUSHBUTTON "Compare", IDC_DLG_COMPARE, 0, 0, 60, 14
+	CONTROL "", IDC_DLG_ORIGINAL, "RICHEDIT50W", ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL | ES_NOHIDESEL, 1, 1, 100, 100, WS_EX_STATICEDGE
+	CONTROL "", IDC_DLG_COMPARED, "RICHEDIT50W", ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL | ES_NOHIDESEL, 104, 1, 100, 100, WS_EX_STATICEDGE
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -775,6 +803,7 @@ BEGIN
 	BEGIN
 		MENUITEM "Comment\tCtrl+/", IDM_EDITOR_COMMENT
 		MENUITEM "Format\tCtrl+T", IDM_EDITOR_FORMAT
+		MENUITEM "Compare\tCtrl+D", IDM_EDITOR_COMPARE
 		MENUITEM SEPARATOR
 		MENUITEM "Cut\tCtrl+X", IDM_EDITOR_CUT
 		MENUITEM "Copy\tCtrl+C", IDM_EDITOR_COPY
@@ -790,13 +819,14 @@ IDC_MENU_RESULT MENU
 BEGIN
 	POPUP "Result"
 	BEGIN
+		MENUITEM "Copy cell", IDM_RESULT_COPY_CELL
+		MENUITEM "Copy row", IDM_RESULT_COPY_ROW
+		MENUITEM SEPARATOR
 		MENUITEM "Column filters", IDM_RESULT_FILTERS
 		MENUITEM "Value preview", IDM_RESULT_PREVIEW
 		MENUITEM "View as chart", IDM_RESULT_CHART
 		MENUITEM "Filter by value", IDM_RESULT_VALUE_FILTER
-		MENUITEM SEPARATOR
-		MENUITEM "Copy cell to clipboard", IDM_RESULT_COPY_CELL
-		MENUITEM "Copy row to clipboard", IDM_RESULT_COPY_ROW
+		MENUITEM "Transpose", IDM_RESULT_TRANSPOSE
 		MENUITEM SEPARATOR
 		MENUITEM "Save as table", IDM_RESULT_AS_TABLE
 		MENUITEM "Export to csv", IDM_RESULT_EXPORT
@@ -922,6 +952,7 @@ BEGIN
 	POPUP "Text Preview"
 	BEGIN
 		MENUITEM "Copy", IDM_EDITOR_COPY
+		MENUITEM "Save to file", IDM_EXPORT_FILE
 		MENUITEM "View as file", IDM_BLOB_VIEW
 	END
 END
@@ -985,10 +1016,13 @@ BEGIN
 		"F9/Ctrl + Enter - Execute query\n" \
 		"Alt + F9 - Execute only current query\n" \
 		"F12/Ctrl + Alt + Enter - Execute as batch (synchronous is off, joint output)\n" \
+		"F3 - Find the next text occurance\n"
+		"Shift + F3 - Find the previous text occurance\n"
+		"Shift + F2 - Toggle text case\n" \
 		"Tab - Add indents\n" \
 		"Tab + Shift - Remove indents\n" \
-		"Shift + T - Format query\n" \
-		"Shift + F3 - Toggle text case\n" \
+		"Ctrl + T - Format query\n" \
+		"Ctrl + D - Compare query with clipboard\n" \
 		"Ctrl + W - Toggle word wrap mode\n" \
 		"Ctrl + / - Comment/uncomment block\n" \
 		"Ctrl + Space, Ctrl + Click - Get quick help\n" \
@@ -998,12 +1032,14 @@ BEGIN
 		"Ctrl + Up - Previous query\n" \
 		"Ctrl + Down - Next query\n" \
 		"Ctrl + Tab - Find query beginning with input part\n\n" \
-		"Query result\n" \
+		"Query resultset\n" \
 		"Ctrl + Click - View a cell value\n" \
 		"Ctrl + Tab - Toggle to a next result\n" \
 		"Ctrl + 1, Ctrl + 2, ... - Sort by column 1, 2, ... \n" \
 		"Ctrl + Shift + C - Copy selected rows to clipboard with a header\n" \
-		"Alt + Click - Show data if the column references to another table by FK key\n" \
+		"Alt + Click - Show referenced data\n" \
+		"Alt + Double Click - Drill-down by referenced value\n" \
+		"Backspace or mouse Back-key - Return to the previous drill-down resultset\n" \
 		"Alt + Click - Open BLOB as file\n\n" \
 		"Data editor\n" \
 		"Ctrl + Click - Edit a cell value\n" \
