--- a/src/resource.rc
+++ b/src/resource.rc
@@ -714,6 +714,7 @@ BEGIN
 	BEGIN
 		MENUITEM "Query data", IDM_QUERY_DATA
 		MENUITEM "Edit data", IDM_EDIT_DATA
+		MENUITEM "Pin on top", IDM_PIN_ON_TOP
 		MENUITEM SEPARATOR
 		MENUITEM "Edit", IDM_EDIT
 		MENUITEM "Rename", IDM_RENAME
@@ -742,6 +743,7 @@ BEGIN
 	BEGIN
 		MENUITEM "Query data", IDM_QUERY_DATA
 		MENUITEM "View data", IDM_EDIT_DATA
+		MENUITEM "Pin on top", IDM_PIN_ON_TOP
 		MENUITEM SEPARATOR
 		MENUITEM "Rename", IDM_RENAME
 		MENUITEM "Edit", IDM_EDIT
